[package]
name = "cc-switch-usb-rs"
version = "0.1.0"
authors = ["KSean222 <44050761+KSean222@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.6.0"
cold-clear = { git = "https://github.com/MinusKelvin/cold-clear", rev = "bdf21ce" }
libtetris = { git = "https://github.com/MinusKelvin/cold-clear", rev = "bdf21ce" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
